2011-09-01  Bruno Haible  <bruno@clisp.org>

	strtoimax: Avoid link error on OSF/1 with DTK cc.
	* m4/strtoimax.m4 (gl_FUNC_STRTOIMAX): Always test whether strtoimax is
	defined as a function.
	* modules/strtoimax (Depends-on, configure.ac): Test only whether
	strtoimax is defined, not whether it is declared.

2011-09-01  Bruno Haible  <bruno@clisp.org>

	imaxdiv: Avoid link error on OSF/1 with DTK cc.
	* m4/imaxdiv.m4 (gl_FUNC_IMAXDIV): Also test whether imaxdiv is defined
	as a function.
	* modules/imaxdiv (configure.ac): Test whether imaxdiv is defined, not
	whether it is declared.

2011-09-01  Bruno Haible  <bruno@clisp.org>

	imaxabs: Avoid link error on OSF/1 with DTK cc.
	* m4/imaxabs.m4 (gl_FUNC_IMAXABS): Also test whether imaxabs is defined
	as a function.
	* modules/imaxabs (configure.ac): Test whether imaxabs is defined, not
	whether it is declared.

2011-09-01  Bruno Haible  <bruno@clisp.org>

	pthread: Determine $(LIB_PTHREAD) correctly on IRIX 6.5.
	* m4/pthread.m4 (gl_PTHREAD_CHECK): Check for pthread_join, not
	pthread_create.

2011-09-01  Paul Eggert  <eggert@cs.ucla.edu>

	openat: work around AIX 7.1 fstatat issue
	This should fix the problem that was not properly fixed
	in the previous change, dated 2011-08-30.
	* lib/fstatat.c: Include <sys/stat.h> twice, the first with
	__need_system_stat_h defined.
	(orig_fstatat) [HAVE_FSTATAT]: New function.
	(rpl_fstatat): Go back to the old way of doing things,
	except call orig_fstatat instead of fstatat.
	* m4/openat.m4 (gl_FUNC_FSTATAT): Remove unnecessary check for openat.
	Remove unnecessary check whether fstatat fills in st_size etc.

2011-09-01  Bruno Haible  <bruno@clisp.org>

	sys_select: Avoid a syntax error regarding timespec_t on IRIX 6.5.
	* lib/sys_select.in.h [__sgi]: When included from <sys/bsd_types.h>,
	just include the system's header.

2011-08-31  Jim Meyering  <meyering@redhat.com>

	tests: avoid spurious assertion failure in test-float.c on ppc64