@@ -9,13 +9,13 @@ m4/strtoumax.m4
 
 Depends-on:
 inttypes-incomplete
-verify          [test "$ac_cv_have_decl_strtoumax" != yes && test $ac_cv_func_strtoumax = no]
-stdint          [test "$ac_cv_have_decl_strtoumax" != yes && test $ac_cv_func_strtoumax = no]
-strtoull        [test "$ac_cv_have_decl_strtoumax" != yes && test $ac_cv_func_strtoumax = no && test $ac_cv_type_unsigned_long_long_int = yes]
+verify          [test $ac_cv_func_strtoumax = no]
+stdint          [test $ac_cv_func_strtoumax = no]
+strtoull        [test $ac_cv_func_strtoumax = no && test $ac_cv_type_unsigned_long_long_int = yes]
 
 configure.ac:
 gl_FUNC_STRTOUMAX
-if test "$ac_cv_have_decl_strtoumax" != yes && test $ac_cv_func_strtoumax = no; then
+if test $ac_cv_func_strtoumax = no; then
   AC_LIBOBJ([strtoumax])
   gl_PREREQ_STRTOUMAX
 fi
